--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
-    <head></head>
+    <head>
+        <title>Floret Clicking</title>
+        <meta name="description" content="A clicker game about petting a floret." />
+    </head>
     <body></body>
 </html>
